styling fixes and secret copied message

--- a/src/components/ProjectSecret/ProjectSecret.css
+++ b/src/components/ProjectSecret/ProjectSecret.css
@@ -1,8 +1,13 @@
+.project-secret-wrapper {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+
 .project-secret-row {
   display: flex;
   flex-direction: row;
   align-items: flex-end;
-  margin-bottom: 28px;
 }
 
 .project-secret-row .validating_form_input {
@@ -15,6 +20,15 @@
   border-radius: 5px;
   padding: 9px;
   cursor: pointer;
+  transition: border 0.2s ease-in-out;
+}
+
+.project-secret-copy-secret:hover {
+  border: 1px solid #5f65ff;
+}
+
+.project-secret-copy-secret .inner-icon {
+  transition: background-color 0.2s ease-in-out;
 }
 
 .project-secret-copy-secret:hover .inner-icon {
@@ -24,4 +38,12 @@
 .project-secret-copy-secret .icon {
   padding-bottom: 0;
   margin: 0 auto;
+}
+
+.secret-copy-message {
+  position: absolute;
+  top: 95px;
+  color: #00a599;
+  margin-left: 10px;
+  font-size: 14px;
 }
