--- a/src/routes/ProjectView/PriorityView/PriorityView.css
+++ b/src/routes/ProjectView/PriorityView/PriorityView.css
@@ -14,6 +14,7 @@
   border-top-right-radius: 10px;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .priority-menu-wrapper {
