--- a/src/components/Preferences/Preferences.css
+++ b/src/components/Preferences/Preferences.css
@@ -66,7 +66,8 @@
   transition: border 0.2s ease-in-out;
 }
 
-.navigation-mode-option:hover {
+.navigation-mode-option:hover,
+.navigation-mode-option.active {
   border: 1px solid #6d0ef7;
   box-shadow: 0px 3px 6px #00000016;
 }
