use edge connectors themselves to handle click and hover

--- a/src/components/EdgeConnectors/EdgeConnectors.css
+++ b/src/components/EdgeConnectors/EdgeConnectors.css
@@ -15,6 +15,7 @@
   margin: 10px;
 }
 
-.edge-connector:hover .edge-connector-blue-dot {
+.edge-connector:hover .edge-connector-blue-dot,
+.edge-connector.active .edge-connector-blue-dot {
   background-color: #6772ff;
 }
