--- a/src/components/PriorityPicker/PriorityPicker.css
+++ b/src/components/PriorityPicker/PriorityPicker.css
@@ -5,10 +5,10 @@
 
 .priority_tabs {
   padding: 0 24px 0 24px;
-  display: flex;
-  flex-direction: row;
+  /* display: flex;
+  flex-direction: column; */
   margin-bottom: 10px;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   border-bottom: 1px solid #e8e8e8;
   font-size: 14px;
 }
@@ -34,8 +34,8 @@
 }
 
 .my_vote {
-  padding: 0 24px 0 24px;
-  margin-top: 46.5px;
+  /* padding: 0 24px 0 24px; */
+  margin-top: 40px;
 }
 
 .aggregated_priority_title {
@@ -44,7 +44,8 @@
 }
 
 .aggregated_priority_inputs {
-  margin-bottom: 24px;
+  margin-top: 6px;
+  margin-bottom: 6px;
   color: #898989;
   font-size: 12px;
 }
