--- a/src/components/MultiEditBar/MultiEditBar.css
+++ b/src/components/MultiEditBar/MultiEditBar.css
@@ -44,6 +44,19 @@
   top: unset;
 }
 
+/* classes ralated to status picker on MultiEditBar */
 .status-popup.modal-wrapper .modal-header .inner-icon {
   background-color: #ff5d36;
+}
+
+.multi-edit-bar.has-selection .status-color.can-click.not-hoverable {
+  width: 22px;
+  height: 22px;
+  margin: 6px;
+}
+
+.multi-edit-bar.has-selection .status-color.can-click.not-hoverable:hover {
+  width: 22px;
+  height: 22px;
+  margin: 6px;
 }
