--- a/src/routes/ProjectView/PriorityView/PriorityView.css
+++ b/src/routes/ProjectView/PriorityView/PriorityView.css
@@ -79,3 +79,20 @@
   border-top: solid 1px #d9d9d9;
   margin: 0 20px 0 20px;
 }
+
+.priority-view-picker-animation {
+  transition: opacity 0.3s ease;
+  position: absolute;
+  top: 20%;
+  left: 40px;
+}
+.priority-view-picker-animation.exit,
+.priority-view-picker-animation.enter-done,
+.priority-view-picker-animation.enter-active {
+  opacity: 1;
+}
+.priority-view-picker-animation.enter,
+.priority-view-picker-animation.exit-done,
+.priority-view-picker-animation.exit-active {
+  opacity: 0;
+}
