EdgeConnector on MultiEditBar + EdgeConnector on Guidebook

--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -83,8 +83,9 @@
 
 .button.stroke {
   background: transparent;
-  border: 1px solid black;
-  color: black;
+  border: 1px solid #4d4d4d;
+  color: #4d4d4d;
+  transition: color 0.2s ease-in-out, border 0.2s ease-in-out;
 }
 
 .button.stroke:hover {
