shift to Parent-Children model for EdgeConnector

--- a/src/components/EdgeConnectorPicker/EdgeConnectorPicker.css
+++ b/src/components/EdgeConnectorPicker/EdgeConnectorPicker.css
@@ -54,6 +54,6 @@
 
 .edge-connector-buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: 30px;
 }
