--- a/src/components/ErrorScreen/ErrorScreen.css
+++ b/src/components/ErrorScreen/ErrorScreen.css
@@ -8,8 +8,8 @@
 .error-screen-content-frame {
   overflow: hidden;
   margin: auto auto;
-  width: 900px;
-  height: 436px;
+  max-width: 1000px;
+  height: 520px;
   position: relative;
   display: flex;
   flex-direction: row;
@@ -54,6 +54,7 @@
 }
 
 .show-stack-trace-wrapper {
+  height: 150px;
 }
 
 .show-stack-trace-button {
@@ -79,7 +80,7 @@
 }
 
 .show-stack-trace-field {
-  height: 100px;
+  height: 120px;
   background-color: #efefef;
   border-radius: 4px;
   border: 1px solid #e6e6e6;
@@ -88,7 +89,7 @@
   font-family: monospace;
   white-space: pre;
   overflow: scroll;
-  width: 480px;
+  width: 100%;
   resize: none;
 }
 
@@ -104,5 +105,5 @@
 
 .error-screen-column-right img {
   padding: 40px;
-  width: 240px;
+  width: 320px;
 }
