--- a/src/components/LoadingScreen/LoadingScreen.css
+++ b/src/components/LoadingScreen/LoadingScreen.css
@@ -5,7 +5,7 @@
   align-items: center;
   position: fixed;
   top: 0;
-  background: #fff;
+  background: #EBE9E2;
   z-index: 10000;
 }
 
@@ -19,12 +19,11 @@
   font-family: 'hk-grotesk-medium', Helvetica, Sans-Serif;
   font-weight: normal;
   color: #717171;
-  font-weight: normal;
 }
 
 .loading_screen img {
-  height: 44px;
-  padding: 18px;
+  height: 50px;
+  padding: 20px;
   -webkit-animation: spin 2s linear infinite;
   -moz-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
