--- a/src/components/CreateProjectModal/CreateProjectModal.css
+++ b/src/components/CreateProjectModal/CreateProjectModal.css
@@ -1,8 +1,10 @@
 .create-project-modal-wrapper {
   width: 550px;
-  height: 443px;
+  /* height: 443px; */
   overflow: hidden;
   position: relative;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .create-project-modal-wrapper .validating_form_input {
@@ -19,9 +21,11 @@
   align-items: flex-end;
   margin-bottom: 28px;
 }
+
 .create-project-image-row .validating_form_input {
   margin-bottom: 0;
 }
+
 .create-project-image {
   margin-left: 8px;
   width: 40px;
@@ -50,6 +54,7 @@
 /* project created modal animation */
 
 /* default is to be hidden */
+
 .project-created-modal {
   /* position: absolute; */
   opacity: 0;
@@ -59,6 +64,7 @@
 }
 
 /* then it shows */
+
 .project-created-modal.project-created {
   opacity: 1;
   -webkit-transform: scale(1);
