--- a/src/components/CreateProjectModal/CreateProjectModal.css
+++ b/src/components/CreateProjectModal/CreateProjectModal.css
@@ -1,6 +1,6 @@
 .create-project-modal-wrapper {
-  width: 550px;
-  /* height: 443px; */
+  /* width: 550px; */
+  height: 453px;
   overflow: hidden;
   position: relative;
   justify-content: space-between;
@@ -42,6 +42,7 @@
   position: absolute;
   opacity: 1;
   transition: opacity 0.3s, transform 0.4s;
+  width: 420px;
 }
 
 .create-project-form.project-created {
