--- a/src/components/UpdatePromptModal/UpdatePromptModal.css
+++ b/src/components/UpdatePromptModal/UpdatePromptModal.css
@@ -1,4 +1,4 @@
-.modal-wrapper {
+.update-prompt-modal.modal-wrapper {
   width: 540px;
   min-height: 540px;
   padding: 70px;
@@ -18,12 +18,13 @@
   font-family: 'hk-grotesk-bold', Helvetica, Sans-Serif;
   margin-bottom: 8px;
 }
+
 .update-details-content {
   font-size: 14px;
   line-height: 1.45;
 }
 
-.update-details-content li { 
+.update-details-content li {
   list-style-type: '🌰';
   padding-inline-start: 0.5ch;
   margin-bottom: 2px;
