--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -30,7 +30,7 @@
 }
 
 .modal.modal-white {
-  background: rgba(255, 255, 255, 0.7);
+  background: rgb(243 241 233 / 70%);
 }
 
 .modal-wrapper {
@@ -38,7 +38,7 @@
   width: 540px;
   /* min-height: 345px; */
   box-sizing: border-box;
-  padding: 50px 60px;
+  padding: 60px;
   background-color: #ffff;
   border-radius: 10px;
   box-shadow: 0px 0px 6px #00000041;
@@ -46,6 +46,8 @@
   flex-direction: column;
   justify-content: space-between;
   transition: 0.2s all;
+  overflow-y: scroll;
+  max-height: 100vh;
 }
 
 .modal-wrapper .small-close {
