--- a/src/components/DatePicker/DatePicker.css
+++ b/src/components/DatePicker/DatePicker.css
@@ -4,7 +4,7 @@
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
   padding: 20px 0px;
   position: absolute;
-  height: 390px;
+  height: 415px;
   width: 320px;
 }
 
@@ -78,10 +78,11 @@
   display: flex;
   align-items: center;
   margin: 0;
-  font-family: 'hk-grotesk-medium', Helvetica, sans-serif;
-  font-size: 11px;
+  font-family: 'hk-grotesk-semibold', Helvetica, sans-serif;
+  font-size: 14px;
   padding: 0;
   color: #00beb0;
+  z-index: 2;
 }
 
 .clea-button:hover {
@@ -89,13 +90,13 @@
 }
 
 .DateRangePickerInput_clearDates {
-  right: -36px;
-  width: 72px;
   top: unset;
-  right: unset;
-  left: 0;
+  right: -8px;
+  left: unset;
   bottom: 0;
-  margin: 0 10px 0 0;
+  margin: 0;
+  padding: 0;
+  z-index: 2;
 }
 
 .DateRangePickerInput__showClearDates {
