--- a/src/components/Preferences/Preferences.css
+++ b/src/components/Preferences/Preferences.css
@@ -1,6 +1,6 @@
 .preferences-title {
-  font-size: 20px;
-  line-height: 28px;
+  font-size: 24px;
+  line-height: 32px;
   color: #4d4d4d;
   font-family: 'gilroyextrabold', 'gilroyextrabold', Helvetica, sans-serif;
   text-align: center;
@@ -38,7 +38,7 @@
 .preferences-section-subtitle {
   font-size: 14px;
   line-height: 18px;
-  color: #b7b7b7;
+  color: #898989;
   margin-bottom: 40px;
   margin-left: 24px;
 }
@@ -46,7 +46,7 @@
 .navigation-mode-options-wrapper {
   display: flex;
   flex-direction: row;
-  padding: 0 68px;
+  padding: 0 30px;
   margin-bottom: 40px;
 }
 
@@ -66,8 +66,7 @@
   transition: border 0.2s ease-in-out;
 }
 
-.navigation-mode-option:hover,
-.navigation-mode-option.active {
+.navigation-mode-option:hover, .navigation-mode-option.active {
   border: 1px solid #6d0ef7;
   box-shadow: 0px 3px 6px #00000016;
 }
